--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script>
         // --- PEGA AQUÍ TU ENLACE CSV DE GOOGLE SHEETS ---
-        const sheetUrl = https://docs.google.com/spreadsheets/d/e/2PACX-1vR2gB1B3KI-Dy48-Rld8Q6EqhoK4qUw8nS3EvEQhpyenkSNuOFt9-d4L-F8w1mGew/pub?output=csv ; 
+        const sheetUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR2gB1B3KI-Dy48-Rld8Q6EqhoK4qUw8nS3EvEQhpyenkSNuOFt9-d4L-F8w1mGew/pub?output=csv' ; 
 
         Papa.parse(sheetUrl, {
             download: true,
